// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox render component 1`] = `
<ul>
  <li
    className="form__check"
  >
    <input
      className="form__input"
      data-input-value="Sinalize o produto antes"
      id=""
      name="nameTest"
      onBlur={[Function]}
      onChange={[Function]}
      required="true"
      type="checkbox"
    />
    <label
      htmlFor=""
    >
      Sinalize o produto antes
    </label>
  </li>
</ul>
`;

exports[`Checkbox with input text render component 1`] = `
<ul>
  <li
    className="form__check"
  >
    <input
      className="form__input"
      data-input-value="OTHER"
      id={7639}
      name="nameTest"
      onBlur={[Function]}
      onChange={[Function]}
      required="true"
      type="checkbox"
    />
    <label
      htmlFor={7639}
    >
      <input
        className="form__input"
        data-id={7639}
        disabled={true}
        onBlur={[Function]}
        required={false}
        type="text"
      />
    </label>
  </li>
</ul>
`;
